x1188 add cell segmentation lot number to analyser request